--- a/index.Rmd
+++ b/index.Rmd
@@ -659,7 +659,7 @@ In this report, we analysed the amusement park injuries data of the U.S. Since t
 
 5. In high proportion of injury cases, the injured get hurt of their upper limbs, lower limbs and neck. Girls are more likely to have lower limbs injuries.
 
-6. iFly operated by Skygroup investment LLC and Hurricane Harbor operated Six Flags take responsibility to the unusual high figures of limbs injuries in 2015 and 2017. There are potential safety issues with their devices.
+6. iFly operated by Skygroup investment LLC and Hurricane Harbor operated by Six Flags take responsibility to the unusual high figures of limbs injuries in 2015 and 2017. There are potential safety issues with their devices.
 
 7. In Texas, the Six Flags Over Texas park has the most amusement park injuries, especially in year 2013 and 2014. The Skygroup Investments LLC DBA iFly Houston Memorial park had a significant large number of injuries in 2015, while the Typhoon Texas Austin Park had lots of injuries in 2016.
 
